<resources>
    <string name="app_name">BooknPlay</string>
    <string name="emailText">Email</string>
    <string name="wachtwoordText">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="district">District</string>
    <string name="country">Country</string>
    <string name="matches">Matches</string>
    <string name="sport">Sport</string>
    <string name="level">Level</string>
    <string name="best_hand">Best Hand</string>
    <string name="loginText">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="SignupTextView">Already have an account?</string>
    <string name="SignInTextView">I dont have an account</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <string name="play_a_match">Play a Match</string>
    <string name="book_a_court">Book a Court</string>

    <string-array name="best_hand_options">
        <item>Right Hand</item>
        <item>Left Hand</item>
    </string-array>

    <!-- Strings used in the court item layout -->
    <string name="court_image">Court Image</string>
    <string name="court_name">Court Name</string>
    <string name="available_times">Avalaible Times</string>
    <string name="book">Book Now</string>

    <!-- Strings for the CourtsActivity -->
    <string name="title_activity_courts">Choose a Court</string>

    <!-- Error messages -->
    <string name="error_fetching_courts">Error fetching courts</string>
    <string name="error_loading_image">Error loading image</string>

    <!-- Other strings -->
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="choose_time_slot">Choose a Time Slot</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="booking_success">Booking successful!</string>
    <string name="booking_failure">Booking failed, please try again.</string>
    <string name="title_activity_court_adapter">CourtAdapter</string>


</resources>